--- a/style.css
+++ b/style.css
@@ -1,24 +1,137 @@
 *,
 *::before,
 *::after {
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 html {
-	width: 100vw;
-	height: 100vh;
-	font-size: 62.5%;
+  width: 100vw;
+  height: 100vh;
+  font-size: 62.5%;
 }
 
 body {
-	width: 100%;
-	height: 100%;
-	line-height: 1.6;
+  width: 100%;
+  height: 100%;
+  line-height: 1.6;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 #root {
-	width: 100%;
-	height: 100%;
+  width: 100%;
+  height: 100%;
+}
+
+.header,
+.footer {
+  height: 6.4rem;
+  background-color: black;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.header__logo {
+  font-size: 3.2rem;
+}
+
+.footer__copy {
+  font-size: 2rem;
+}
+
+.game__container {
+  width: 100%;
+  height: calc(100% - 12.8rem);
+  position: relative;
+  background-color: #eee;
+}
+
+.result__container {
+  position: absolute;
+  top: 20%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.result__text {
+  font-size: 4.8rem;
+}
+
+.board__container {
+  width: 38.4rem;
+  height: 38.4rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  top: 50%;
+  left: 50%;
+  position: absolute;
+  transform: translate(-50%, -50%);
+  box-shadow: 0 1.5rem 2.5rem 0 rgba(0, 0, 0, 0.1);
+  display: grid;
+  grid-template-rows: repeat(3, 1fr);
+}
+
+.board__row {
+  height: 100%;
+  width: 38.4rem;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+}
+
+.board__item {
+  width: 100%;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  background-color: white;
+  outline: none;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: inherit;
+  font-size: 4.8rem;
+  transition: background-color 0.3s;
+}
+
+.board__item:hover {
+  background-color: rgba(0, 0, 0, 0.1);
+}
+
+.board__item:disabled {
+  background-color: #aaa;
+}
+
+.reset__container {
+  position: absolute;
+  bottom: 20%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.reset__btn {
+  font-family: inherit;
+  font-size: 2.4rem;
+  text-transform: uppercase;
+  padding: 0.8rem 1.4rem;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 0.8rem;
+  cursor: pointer;
+  background-color: rgb(255, 255, 255);
+  box-shadow: 0 1rem 2rem 0 rgba(0, 0, 0, 0.1);
+  transition: background-color 0.3s, transform 0.1s ease-in-out,
+    box-shadow 0.1s ease-in-out;
+  letter-spacing: 0.2rem;
+}
+
+.reset__btn:hover {
+  background-color: rgba(5, 4, 4, 0.1);
+}
+
+.reset__btn:active {
+  transform: translateY(0.5rem);
+  box-shadow: 0 0.5rem 0.5rem 0 rgba(0, 0, 0, 0.1);
 }
